# vofpnm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  capillary_rise.py  cfd.py  cfd_class.py  test.py
cfd/: capillary_rise.py  cfd.py  cfd_class.py  cfd_history_matching.py  cfd_optimise.py  cfd_optimise_kr.py  cfd_optimise_sat.py  cfd_rel_perms.py  ini_class.py
config/: config.ini
helpers/: __init__.py  calc_relperms.py  graphics_builder.py  net_converter.py  net_converter_jing.py  net_creator.py  net_creator_article.py  net_creator_relperm_article.py  net_creator_vofpnm_article.py
latex/: models.synctex  models.tex
pnm/: CMakeLists.txt  Pnm.cpp  Pnm.h  wrapper.cpp
vof/: CMakeLists.txt  Equation.cpp  Equation.h  eigenSetGet.h  wrapper.cpp
vof/math/: Boundary.cpp  Boundary.h  Convective.cpp  Convective.h  Local.cpp  Local.h  Props.cpp  Props.h  funcs.cpp  funcs.h
